<resources>
    <string name="app_name">Cappture The Flag</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="how_to_play">How to Play</string>
    <string name="play">Play</string>
    <string name="items">Items</string>
    <string name="teams">Teams</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="help">Help</string>
    <string name="network_error">Network Error</string>
    <string name="internet_settings">Internet Settings</string>
    <string name="cancel">Cancel</string>
    <string name="msg_data_required">A data connection is required!</string>
    <string name="enter_name">Enter your name</string>
    <string name="msg_enter_name">This will be visible to other players</string>
    <string name="okay">Okay</string>
    <string name="format_name">Name: %1$s</string>
    <string name="connection_type">Connection Type</string>
    <string name="change">Change</string>
    <string name="please_wait">Please wait…</string>
    <string name="respawn_error">Respawn Error</string>
    <string name="msg_respawn_error">Return to the respawn zone and wait for 20 seconds to continue playing</string>
    <string name="textview">TextView</string>
    <string name="logo">Logo</string>
    <string name="hello">Hello</string>

    <string name="respawn_1">Respawn zone for team 1</string>
    <string name="zone_1">Zone for team 1</string>
    <string name="zone_neutral">Neutral Zone</string>
    <string name="zone_2">Zone for team 2</string>
    <string name="respawn_2">Respawn zone for team 2</string>

    <string name="out_of_bounds">Out of bounds</string>
    <string name="msg_out_of_bounds">You have left the game area. Would you like to return or quit the game?</string>
    <string name="return_back">Return</string>
    <string name="quit">Quit</string>

    <string name="format_score">Score: %1$s</string>

    <!-- Data to pass from home to play -->
    <string name="device_id">DeviceID</string>
    <string name="display_name">Name</string>
    <string name="team">Team</string>

    <!-- Strings for Google Play Sign in - Main Menu -->
    <string name="sign_in_explanation">Sign In with Google to access bonus features.</string>
    <string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="sign_out">Sign Out</string>
    <string name="click_me">Click me!</string>
    <string name="you_won">OK! You won!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>


    <string name="real_flag">Real Flag</string>
    <string name="fake_flag">Fake Flag</string>
    <string name="no_flag">No Flag</string>
    <string name="flag_close">Flag Close</string>
    <string name="msg_fake_flag">That flag is fake!</string>
    <string name="msg_flag_captured_friendly">We\'re capturing the enemy\'s flag!</string>
    <string name="msg_flag_captured_enemy">They\'re capturing our flag!</string>
    <string name="msg_point_friendly">We\'ve scored a point!</string>
    <string name="msg_point_enemy">They\'ve scored a point!</string>
    <string name="msg_win">We\'ve won!</string>
    <string name="msg_lose">We\'ve lost!</string>

    <string name="location_error">Location Error</string>
    <string name="msg_location_rationale">Access to your location is required for the basic gameplay -
        allowing you to see your teammates, where the flag is and special item boxes.</string>
    <string name="msg_location_permission_denied">The game cannot be played without access to your location.</string>

    <!-- Item names -->
    <string name="empty">Empty</string>
    <string name="common">Common</string>
    <string name="rare">Rare</string>

    <!--Strings for Location checking-->
    <string name="mIntAndLocHeader">Internet and Location Errors</string>
    <string name="mIntAndLocMessage">Please connect both Internet and Location connections</string>
    <string name="mInternetHeader">Internet Connection Error</string>
    <string name="mInternetMessage">Please connect to a working Internet connection</string>
    <string name="mLocationHeader">Location Settings Error</string>
    <string name="mLocationMessage">Please connect your Location connection</string>
    <string name="mLocationHPErrorHeader">Adjust Location Mode</string>
    <string name="mLocationHPErrorMessage">Songle heavily relies on location accuracy.\n\nPlease ensure the Location Mode in  Settings is set to High Accuracy.</string>
    <string name="retry">RETRY</string>
    <string name="cQuitAlertMMHeader">Do you wish to quit the game?</string>
    <string name="cQuitAlertHeader">Do you wish to quit the session?</string>
    <string name="cQuitAlertButton">Quit</string>
    <string name="cQuitCancelButton">Cancel</string>


    <!-- Strings for explanation 'menu' -->
    <string name="hint_intro_title">Welcome to FlagTag!</string>
    <string name="hint_intro_msg">FlagTag is a Capture the Flag based game.
        Bring your favourite games to outdoor environments with power-ups, leader-boards and bantz.</string>
    <string name="hint_get_started_title">Get Started</string>
    <string name="hint_get_started_msg">To get started, just press the big yellow play icon on the main screen.
        You\'ll automatically join a game if there\'s one going on, but if no one else is playing, then grab your friends and get them to join the fun too!
        If you really want to read the boring rules (rather than figure it out as you go along) then press onward</string>
    <string name="hint_rules_title">How To Play</string>
    <string name="hint_rules_msg">The rules are simple. There are three main zones you\'ll be able to see on the map - one belongs to your team, one belongs to the other team, and the middle zone is neutral.
    Within your own zone there is a subzone (but more on that later). To win, you need to find your flag, which has been hidden somewhere in the other team\'s area.
    You can run over there to get it - but watch out! If you're in the enemy zone and get tapped by one of them, you'll need to start again (be honest!).
    To do this, you need to hold your phones together and then walk back to your own area</string>

</resources>
