<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/SettingsText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="Settings"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="@+id/LogoName"
        app:layout_constraintStart_toStartOf="@+id/LogoName"
        app:layout_constraintTop_toBottomOf="@id/LogoName" />

    <ImageView
        android:id="@+id/LogoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="532dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:contentDescription="This is the FlagTag Logo Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flag_tag_blue" />

    <Switch
        android:id="@+id/switch_connection_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="8dp"
        android:text="4G"
        app:layout_constraintBottom_toBottomOf="@+id/txt_view_connection_type"
        app:layout_constraintStart_toEndOf="@+id/txt_view_connection_type"
        app:layout_constraintTop_toTopOf="@+id/txt_view_connection_type"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/format_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SettingsText" />

    <TextView
        android:id="@+id/txt_view_connection_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/connection_type"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_view_name" />

    <Button
        android:id="@+id/btn_change"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginEnd="68dp"
        android:layout_marginStart="78dp"
        android:text="@string/change"
        app:layout_constraintBottom_toBottomOf="@+id/txt_view_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_view_name"
        app:layout_constraintTop_toTopOf="@+id/txt_view_name" />

</android.support.constraint.ConstraintLayout>